hphp/hack/test/typecheck/idx3_2.php.exp
File "idx3_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
  File "idx3_2.php", line 7, characters 15-20:
  Expected `string`
  File "idx3_2.php", line 3, characters 27-29:
  But got `int`
  File "collections/Map.hhi", line 58, characters 32-33:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 1108, characters 26-27:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 842, characters 26-27:
    via this generic `Tv`
